Fixed the reason cards spacing

--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ body{
 
 .reason-cards{
   display: flex;
-  gap: 1.5rem;
+  justify-content: space-between;
 }
 
 .reason-cards h2 {
